<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="MNG_APPLICATION_INPUTS_32BIT" Id="{ef6d0073-26aa-4771-a65b-d51be90f63d3}">
    <Declaration><![CDATA[
TYPE MNG_APPLICATION_INPUTS_32BIT :
STRUCT
    NumSignals                     : INT     := 1         ;
    init_sensor_module_x_00_IR : BOOL    := 0; (* Physics://physics/Modulel_X/init_sensor_module_x?IR *)
END_STRUCT
END_TYPE


]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>