<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="MNG_RawDatagram" Id="{0830094e-73d5-4fd3-8d11-07ca64b8b319}">
    <Declaration><![CDATA[TYPE MNG_RawDatagram :(* binary TCP/IP datagram (4 byte aligned) *)
STRUCT
	Header	:  MNG_DatagramHeader;(* datagram header *)
	Payload	:  MNG_DataARRAY;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>